--- a/.env
+++ b/.env
@@ -21,5 +21,5 @@ dgShowLocalGraph=false
 dgShowInlineTitle=true
 dgLinkPreview=false
 dgShowFileTree=true
-dgShowToc=false
+dgShowToc=true
 dgEnableSearch=true
